# technopark_hw-algorithms

./: .gitignore  README.md
task-10-3/: 10.cc  README.md
task-11-4_2/: 11-4_2.cc  README.md
task-12-1/: 12-1.cc  CMakeLists.txt
task-12-1/Graph/inc/: arc_graph.h  igraph.h  list_graph.h  matrix_graph.h  set_graph.h
task-12-1/Graph/src/: arc_graph.cc  igraph.cc  list_graph.cc  matrix_graph.cc  set_graph.cc
task-13-2/: 13-2.cc
task-14-3/: 14-3.cc
task-1_3/: 1_3.cc  README.md
task-2_1/: 2_1.cc  README.md
task-3_1/: 3_1.cc  README.md
task-4_3/: 4_3.cc  README.md
task-6_2/: 6_2.cc
task-8(1)_1/: 8-1_1.cc  README.md
task-8-1_1/: 8-1_1.cc
task-9(2)-4/: 9(2)-4.cc
task-9-2_4/: 9-2_4.cc  README.md
